# CPP-2D-Game-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SpielMappe.sln  vcpkg.json
Spiel/src/: AgeScript.cpp  AgeScript.h  AgeScript.hpp  BaseSystem.h  BaseSystem.hpp  BaseTypes.h  BaseTypes.hpp  BasicScripts.h  Basis.h  BuildQtreeJob.hpp  BulletScript.cpp  BulletScript.h  BulletScript.hpp  CMakeLists.txt  CacheAABBJob.hpp  Camera.h  Camera.hpp  CollGrid.hpp  Collidable.h  CollisionCheckJob.cpp  CollisionCheckJob.h  CollisionCheckJob.hpp  CollisionConstraintSet.cpp  CollisionConstraintSet.hpp  CollisionResolutionJob.hpp  CollisionSystem.cpp  CollisionSystem.h  CollisionSystem.hpp  CollisionWorker.cpp  CollisionWorker.h  CollisionWorker.hpp  CollisionWorkerData.hpp  CompController.cpp  CompController.h  Component.h  ComponentTypes.hpp  CoreCompInclude.hpp  CoreCompList.h  CoreComponents.h  CoreComponents.hpp  (+191 more)
Spiel/src/Ants/: Ants.hpp  AntsWorld.hpp  PheroGrid.hpp
Spiel/src/engine/: Camera.hpp  ComponentTypes.hpp  DrawFrame.cpp  EngineCore.cpp  EngineCore.hpp  EntityComponentManager.hpp  EntityComponentManagerView.hpp  EntityComponentStorage.hpp  EntityManager.cpp  EntityManager.hpp  EventSystem.hpp  ImpulseResolutionJob.hpp  IndexSet.hpp  InputManager.hpp  JobManager.hpp  JobSystem.cpp  JobSystem.hpp  Layer.hpp  Log.hpp  OGLShaderUtil.hpp  OGLTextureRenderBuffer.hpp  Perf.hpp  RenderTypes.hpp  Renderer.hpp  RenderingWorker.cpp  SparseBuffer.hpp  TextureRefManager.cpp  Timing.hpp  UIAnchor.cpp  UIBar.cpp  UIBar.hpp  UIButton.hpp  UIElement.hpp  (+10 more)
(+401 files in other folders)
